--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     border: 1px solid black;
     margin: 0 2px 2px;
+    overflow: hidden;
   
     &:hover {
       cursor: pointer;
