--- a/src/components/sale-items/sale-items.styles.scss
+++ b/src/components/sale-items/sale-items.styles.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 3rem 0;
+    padding: 2rem 0;
     border: 1px solid black;
     gap: 2rem;
     
